--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -1,3 +1,12 @@
 #frame{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vmin;
+    height: 100vmin;
+    padding: 0;
     
+    margin: auto;  
 }
