--- a/public/css/iframe.css
+++ b/public/css/iframe.css
@@ -21,17 +21,17 @@
 
 .black-out{
   animation-duration: 3s;
-  animation-name: fade-out;
+  animation-name: black-fade-out;
   animation-fill-mode:forwards;
 }
 
 .black-in{
   animation-duration: 3s;
-  animation-name: fade-in;    
+  animation-name: black-fade-in;    
   animation-fill-mode:forwards;
 }
 
-@keyframes fade-out {
+@keyframes black-fade-out {
   0% {
     filter:brightness(100%);
   }
@@ -40,7 +40,7 @@
   }
 }
 
-@keyframes fade-in {
+@keyframes black-fade-in {
   0% {
     filter:brightness(0%);
   }
