--- a/public/css/iframe.css
+++ b/public/css/iframe.css
@@ -13,7 +13,16 @@
   max-width: 100vmin;
   max-height: 100vmin;
 
-  font-size: 4vmin;  
+  font-size: 4vmin; 
+  font-family: 
+      "游明朝", 
+      YuMincho, 
+      "ヒラギノ明朝 ProN W3", 
+      "Hiragino Mincho ProN", 
+      "HG明朝E", 
+      "ＭＳ Ｐ明朝", 
+      "ＭＳ 明朝", 
+      serif;
 }
 
 
