--- a/public/css/play.css
+++ b/public/css/play.css
@@ -14,6 +14,24 @@ h2.title {
 
 
 
+.panel{
+    border: 0.25vmin solid maroon;
+    background-color: beige;
+    border-radius: 1vmin;
+
+    box-shadow: 0 2vmin 1vmin -1vmin #777;
+    
+    padding-left: 1vmin;
+    padding-top: 1vmin;
+    position: absolute;
+
+    top: 0.5em;
+    left: 0.5em;
+}
+
+
+
+
 .image{
   background-repeat: no-repeat;
   background-size: contain;
